# otmorris

./: .travis.yml  CMakeLists.txt  ChangeLog  README.rst  customize.sh
cmake/: OTMORRISConfig.cmake.in  OTTemplateConfig.cmake.in  UseOTMORRIS.cmake  UseOTTemplate.cmake
distro/debian/: changelog  control  rules
distro/rpm/: otmorris.spec  ottemplate.spec
distro/windows/: README.txt  installer.nsi
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/otmorris/: OTMORRISprivate.hxx
lib/include/ottemplate/: OTTemplate.hxx  OTTemplateprivate.hxx
lib/src/: CMakeLists.txt  Morris.cxx  MorrisExperiment.cxx  MorrisExperimentGrid.cxx  MorrisExperimentImplementation.cxx  MorrisExperimentLHS.cxx  MorrisImplementation.cxx  MyClass.cxx  MyClass.hxx  MyClassImplementation.cxx  MyClassImplementation.hxx
lib/src/otmorris/: Morris.hxx  MorrisExperiment.hxx  MorrisExperimentGrid.hxx  MorrisExperimentImplementation.hxx  MorrisExperimentLHS.hxx  MorrisImplementation.hxx
lib/src/ottemplate/: MyClass.hxx  MyClassImplementation.hxx
lib/test/: CMakeLists.txt  t_Morris_std.cxx  t_Morris_std.expout  t_MyClass_std.cxx  t_MyClass_std.expout
python/doc/: conf.py.in  index.rst  openturns-objects.inv
python/doc/architecture/: architecture.rst
python/doc/developer_guide/architecture/: architecture.rst
python/doc/developer_guide/validation/: validation.rst
python/doc/examples/: example.py  examplelhs.py  examples.rst
python/doc/user_manual/: user_manual.rst
python/src/: CMakeLists.txt  Morris.i  MorrisExperiment.i  MorrisExperimentGrid.i  MorrisExperimentGrid_doc.i.in  MorrisExperimentImplementation.i  MorrisExperimentImplementation_doc.i.in  MorrisExperimentLHS.i  MorrisExperimentLHS_doc.i.in  MorrisExperiment_doc.i.in  MorrisImplementation.i  MorrisImplementation_doc.i.in  Morris_doc.i.in  MyClass.i  MyClassImplementation.i  MyClassImplementation_doc.i.in  MyClass_doc.i.in  __init__.py  functions.py  otmorris_module.i  ottemplate_module.i  plot_sensitivity.py
python/test/: CMakeLists.txt  morris_fun.py  t_Debug.expout  t_Debug.py  t_MorrisExperiment_grid.expout  t_MorrisExperiment_grid.py  t_MorrisExperiment_std.expout  t_MorrisExperiment_std.py  t_Morris_bound.expout  t_Morris_bound.py  t_Morris_std.expout  t_Morris_std.py  t_MyClass_std.py  t_docstring.expout  t_docstring.py
